# MyWorld

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
commands/: texturec.bat
commands/Windows/: build.bat  make.bat  shaderc.bat  texturec.bat
resource/shaders/: vs_texture.sc
resource/shaders/color/: fs_color.sc  vs_color.sc
resource/shaders/common/: common.sh
resource/shaders/outline/: fs_outline.sc
resource/shaders/texture/: fs_texture.sc
resource/shaders/texture_array/: fs_texture_array.sc  vs_texture_array.sc
resource/shaders/texture_array_color/: fs_texture_array_color.sc  varying.def.sc
resource/shaders/texture_color/: fs_texture_color.sc
resource/shaders/texture_screen_quad/: fs_texture_screen_quad.sc  vs_texture_screen_quad.sc
resource/shaders/water/: fs_water.sc  varying.def.sc  vs_water.sc
src/: main.cpp
src/Core/: App.cpp  App.h  Chunk.cpp  Chunk.h  Cursor.cpp  Cursor.h  Data.cpp  Data.h  EventsHandler.cpp  EventsHandler.h  Info.cpp  Info.h  Time.cpp  Time.h  Util.cpp  Util.h  World.cpp  World.h
src/Core/Objects/: BaseObj.cpp  BaseObj.h  PlayerObj.cpp  PlayerObj.h
src/Core/World/: Chunk.cpp  Chunk.h  ChunkGeneration.cpp  ChunkGeneration.h  GameState.cpp  GameState.h  TerrainGeneration.cpp  TerrainGeneration.h  World.cpp  World.h
src/Events/: Event.h  KeyCode.h  KeyEvent.h  MouseCode.h  MouseEvent.h
src/Physics/: Handler.cpp  Handler.h  HitBox.cpp  HitBox.h
src/Renderer/: Block.cpp  Block.h  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Tools.cpp  Tools.h
src/Renderer/Model/: Block.cpp  Block.h  Grass.cpp  Grass.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/Renderer/Model/Blocks/: Air.cpp  Air.h  Block.cpp  Block.h  Dirt.cpp  Dirt.h  Grass.cpp  Grass.h  Water.cpp  Water.h  Wireframe.cpp  Wireframe.h
src/Renderer/Model/Characters/: Player.cpp  Player.h
src/Window/: Window.cpp  Window.h
